# cartographer

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  package-lock.json  package.json
.claude/skills/dungeon-gen/: SKILL.md
.claude/skills/dungeon-gen/scripts/: topology.py
.github/: RELEASE_BODY.md
.github/workflows/: release.yml
assets/symbols/: README.md
crates/cartographer-cli/: Cargo.toml
crates/cartographer-cli/src/: main.rs
crates/cartographer-core/: Cargo.toml
crates/cartographer-core/src/: error.rs  geometry.rs  lib.rs  model.rs  symbols.rs  units.rs  validate.rs
crates/cartographer-core/src/render/: mod.rs  raster.rs
crates/cartographer-core/tests/: render.rs
crates/cartographer-tauri/: Cargo.toml  tauri.conf.json
crates/cartographer-tauri/capabilities/: default.json
crates/cartographer-tauri/icons/: icon.icns
crates/cartographer-tauri/src/: lib.rs  main.rs
examples/: one-room.yaml  small-tomb.yaml  walls-demo.yaml  wizard-tower-chaos-cult-key.md  wizard-tower-chaos-cult.yaml
schema/: map.schema.json
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  Editor.tsx  Inspector.tsx  LayerPanel.tsx  history.ts  ipc.ts  state.ts  styles.css
