[package]
name = "cartographer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core map model, parser, geometry, and renderer for cartographer."

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
geo = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
tiny-skia = { workspace = true }
image = { workspace = true }
