[package]
name = "cartographer-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cartographer desktop app (Tauri shell over the core renderer)."

[lib]
name = "cartographer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cartographer-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
cartographer-core = { path = "../cartographer-core" }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
